--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2018"
 description = "Simple & easy text-to-speech module for creating bots and much more."
 license = "MIT"
 readme = "README.md"
+repository = "https://github.com/dhairy-online/tts-rust-mod"
+keywords = ["bot", "tts", "text_to_speech"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
