--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "tts_rust"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2018"
 description = "Simple & easy text-to-speech module for creating bots and much more."
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/dhairy-online/tts-rust-mod"
-keywords = ["bot", "tts", "text_to_speech"]
+keywords = ["bot", "tts", "text_to_speech", "testing"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
