--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "tts_rust"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2018"
-description = "Simple & easy text-to-speech module for creating bots and much more."
+description = "Simple & easy text-to-speech module for your needs."
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/dhairy-online/tts-rust-mod"
-keywords = ["bot", "tts", "text_to_speech", "testing"]
+repository = "https://github.com/dhairy-online/tts_rust"
+keywords = ["tts", "text_to_speech", "gTTS"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gtts = "0.1.0"
+minreq = {version="2.0.3", features=["https"]}
+percent-encoding = "2.1.0"
 rodio = "0.14.0"
