--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: install libasound2-dev
+      run: sudo apt-get install libasound2-dev
     - name: Run tests
       run: cargo test --verbose
