--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: install libasound2-dev
       run: sudo apt-get install libasound2-dev
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Run checks
+      run: cargo check --verbose
